--- a/targets/radioone/Makefile.radioone
+++ b/targets/radioone/Makefile.radioone
@@ -1,4 +1,4 @@
-# Sensors Unleashed No. 1 - cc2538 platform makefile
+# Sensors Unleashed RadioOne - cc2538 platform makefile
 
 ifndef CONTIKI
   $(error CONTIKI not defined! You must specify where CONTIKI resides!)
@@ -9,18 +9,19 @@ CONTIKI_TARGET_DIRS += . dev
 PLATFORM_ROOT_DIR = $(CONTIKI)/platform/$(TARGET)
 
 ### Include
-CONTIKI_TARGET_SOURCEFILES += contiki-main.c board.c
-CONTIKI_TARGET_SOURCEFILES += leds-arch.c button-sensor.c
-CONTIKI_TARGET_SOURCEFILES += antenna.c
+CONTIKI_TARGET_SOURCEFILES += contiki-main.c
+CONTIKI_TARGET_SOURCEFILES += leds-arch.c button-sensor.c tps62730.c  radioone-sensors.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
-CLEAN += *.su-cc2538-1
+CLEAN += *.radioone
 
 ### Unless the example dictates otherwise, build with code size optimisations
 ifndef SMALL
   SMALL = 1
 endif
+
+CFLAGS += -g -O0 -gdwarf-2
 
 ### Define the CPU directory
 CONTIKI_CPU=$(CONTIKI)/cpu/cc2538
