--- a/targets/radioone/Makefile.radioone
+++ b/targets/radioone/Makefile.radioone
@@ -10,7 +10,7 @@ PLATFORM_ROOT_DIR = $(CONTIKI)/platform/$(TARGET)
 
 ### Include
 CONTIKI_TARGET_SOURCEFILES += contiki-main.c
-CONTIKI_TARGET_SOURCEFILES += leds-arch.c button-sensor.c tps62730.c  radioone-sensors.c
+CONTIKI_TARGET_SOURCEFILES += leds-arch.c tps62730.c  radioone-sensors.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
 
