--- a/targets/su-cc2538-1/Makefile.su-cc2538-1
+++ b/targets/su-cc2538-1/Makefile.su-cc2538-1
@@ -10,7 +10,7 @@ PLATFORM_ROOT_DIR = $(CONTIKI)/platform/$(TARGET)
 
 ### Include
 CONTIKI_TARGET_SOURCEFILES += contiki-main.c board.c
-CONTIKI_TARGET_SOURCEFILES += leds-arch.c button-sensor.c su-cc2538-1-sensors.c
+CONTIKI_TARGET_SOURCEFILES += leds-arch.c su-cc2538-1-sensors.c
 CONTIKI_TARGET_SOURCEFILES += antenna.c
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
