--- a/sensorsUnleashed/Makefile
+++ b/sensorsUnleashed/Makefile
@@ -1,5 +1,5 @@
 CONTIKI_PROJECT = er-uart-server
-PROJECT_SOURCEFILES += susensors.c pairing.c pulsesensor.c relay.c susensorcommon.c ledindicator.c mainsdetect.c button-sensor.c
+PROJECT_SOURCEFILES += susensors.c pairing.c pulsesensor.c relay.c susensorcommon.c ledindicator.c mainsdetect.c button-sensor.c cmp.c cmp_helpers.c
 
 all: $(CONTIKI_PROJECT)
 
@@ -48,7 +48,7 @@ PROJECT_SOURCEFILES += $(REST_RESOURCES_FILES)
 SMALL=1
 
 # REST Engine shall use Erbium CoAP implementation
-APPS += uartsensors
+#APPS += uartsensors
 APPS += er-coap
 APPS += rest-engine
 
