--- a/.cproject
+++ b/.cproject
@@ -49,7 +49,9 @@
 									<listOptionValue builtIn="false" value="CONTIKI_WITH_IPV6=1"/>
 									<listOptionValue builtIn="false" value="NATIVE=0"/>
 									<listOptionValue builtIn="false" value="COAP_OBSERVE_CLIENT=1"/>
-									<listOptionValue builtIn="false" value="SUVERSION=&quot;0.0.1&quot;"/>
+									<listOptionValue builtIn="false" value="SU_VER_MINOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_MAJOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_DEV=1"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1721034232" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -126,6 +128,9 @@
 									<listOptionValue builtIn="false" value="NETSTACK_CONF_WITH_IPV6=1"/>
 									<listOptionValue builtIn="false" value="CONTIKI_WITH_IPV6=1"/>
 									<listOptionValue builtIn="false" value="COAP_OBSERVE_CLIENT=1"/>
+									<listOptionValue builtIn="false" value="SU_VER_MINOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_MAJOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_DEV=1"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.272618941" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -187,6 +192,9 @@
 									<listOptionValue builtIn="false" value="UIP_CONF_IPV6_RPL=0"/>
 									<listOptionValue builtIn="false" value="HARD_CODED_ADDRESS=1"/>
 									<listOptionValue builtIn="false" value="COAP_OBSERVE_CLIENT=1"/>
+									<listOptionValue builtIn="false" value="SU_VER_MINOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_MAJOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_DEV=1"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1165196972" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -273,6 +281,9 @@
 									<listOptionValue builtIn="false" value="NATIVE=0"/>
 									<listOptionValue builtIn="false" value="size_t=int"/>
 									<listOptionValue builtIn="false" value="COAP_OBSERVE_CLIENT=1"/>
+									<listOptionValue builtIn="false" value="SU_VER_MINOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_MAJOR=0"/>
+									<listOptionValue builtIn="false" value="SU_VER_DEV=1"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.224831948" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
