--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ qrc_*
 /sensorsUnleashed/er-uart-server.native
 /sensorsUnleashed/er-uart-server.radioone
 /sensorsUnleashed/obj_radioone/cc2538.ld
+/core
